--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Howdy Partner!
+  button(type="button" class="btn btn-success") Press Me
+
