--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,14 @@ extends layout
 block content
   h1= title
   p Howdy Partner!
-  button(type="button" class="btn btn-success") Press Me
-
+  button(type="button" class="btn btn-success" onclick="doReduce()") Press Me
+  div(id="reduce") Reduce the Value
+  script. 
+    let count = 20
+    let change = -1
+    function doReduce(){
+      count += change
+      change -= 1
+      document.getElementById('reduce').textContent = `Count ${count} with change ${change}`
+      console.log('pressed')
+    }
