--- a/views/Dessert.pug
+++ b/views/Dessert.pug
@@ -2,4 +2,14 @@ extends layout
 
 block content
   h1= title
-  
+
+  -
+    let results = [{name: 'Pie', rating: 10, color: 'light brown w/ either red, blue, orange, etc.'},
+    {name: 'Cookie', rating: 7, color: 'brown'},
+    {name: 'Ice Cream', rating: 10, color: 'usually white, but sometimes brown, pink, etc.'}];
+
+  div(class='container-fluid')
+    div(class='row')
+      each dessert in results 
+        div(class='col-sm-2') name: #{dessert.name} rating: #{dessert.rating} color: #{dessert.color}
+
