--- a/views/index.pug
+++ b/views/index.pug
@@ -12,5 +12,5 @@ block content
       count += change
       change -= 1
       document.getElementById('reduce').textContent = `Count ${count} with change ${change}`
-      console.log('pressed')
     }
+  a(href='./dessert') to Dessert.pug
