--- a/views/Dessert.pug
+++ b/views/Dessert.pug
@@ -3,10 +3,10 @@ extends layout
 block content
   h1= title
 
-  -
-    let results = [{name: 'Pie', rating: 10, color: 'light brown w/ either red, blue, orange, etc.'},
-    {name: 'Cookie', rating: 7, color: 'brown'},
-    {name: 'Ice Cream', rating: 10, color: 'usually white, but sometimes brown, pink, etc.'}];
+    //- let results = [{name: 'Pie', rating: 10, color: 'light brown w/ either red, blue, orange, etc.'},
+    //- {name: 'Cookie', rating: 7, color: 'brown'},
+    //- {name: 'Ice Cream', rating: 10, color: 'usually white, but sometimes brown, pink, etc.'}];
+  results = results
 
   div(class='container-fluid')
     div(class='row')
