--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Howdy Partner!
-  button(type="button" class="btn btn-success" onclick="doReduce()") Press Me
-  div(id="reduce") Reduce the Value
-  script. 
-    let count = 20
-    let change = -1
-    function doReduce(){
-      count += change
-      change -= 1
-      document.getElementById('reduce').textContent = `Count ${count} with change ${change}`
-    }
-  a(href='./dessert') to Dessert.pug
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/dessert") Take me to desserts
+    br
+    a(href="/") Logout
