--- a/views/dessertupdate.pug
+++ b/views/dessertupdate.pug
@@ -18,7 +18,7 @@ block content
             input#dessertrating(type='number', name='dessertrating', value= dessertrating )
         div.form-group
             label.dessertAttr(for='dessertcolor') Dessert color
-            input#dessertcolor(type='text', name='cost', value= dessertcolor )
+            input#dessertcolor(type='text', name='dessertcolo', value= dessertcolor )
             input(type="submit")
     script.
         document.forms['DessertForm'].addEventListener('submit', (event) => {
