--- a/views/Dessert.pug
+++ b/views/Dessert.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
   h1= title
-  let results = results
+
+  button(class="btn btn-primary" onclick=`dispatch(\"/resource/create\")`) Create a New Dessert
 
   div(class='container-fluid')
     div(class='col m-1')
@@ -10,6 +11,9 @@ block content
         - let destination = `dispatch(\"/resource/update?id=${dessert._id}\")`
         div(class='row-sm-2') name: #{dessert.name} rating: #{dessert.rating} color: #{dessert.color}
           button(class="btn btn-primary ml-1", onclick=destination) Update
+          button(class="btn btn-primary ml-1", onclick=`dispatch(\"/resource/detail?id=${dessert._id}\")`) Details
+          button(class="btn btn-primary ml-1", onclick=`dispatch(\"/resource/delete?id=${dessert._id}\")`) Delete
+
   script.
     function dispatch(path){
       window.location.href=path
